______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.189:

* Generated build file:
  - Fixed bug #985218. The index.html and css are now generated or copied in
    in the correct directory.
    This bug has been in XINS since 0.188.

* Updated Checkstyle from 3.2 to 3.4.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.188:

* XINS/Java Common Library:
  - The classes Int8, Int16, Int32 and Int64 are not final anymore as they
    need to be extended when a defined type specify a minimum or a
    maximum.
    This bug has been in XINS since version 0.185.

* Specification:
  - Added the possibility to have an output section in result codes.

* Generated build file:
  - The java files in the combined directory are removed if the impl.xml
    file has changed.
  - The create-rcd target doesn't create the value attribute for the result
    code anymore.
  - Added the DTD declaration for the creation of the build.xml.
    The build.xml file is now much faster to generate.
  - The create-logdoc creates the logging xml files in the correct directory.
    This bug has been in XINS since version 0.180.
  - Fixed the generation of the logdoc for an API using the new directory
    structure.
    This bug has been in XINS since version 0.180.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.187:

* XINS/Java Common Library:
  - If the LDAP path cannot be found, the LDAPServiceCaller return an empty
    QueryResult with isAuthenticated() returning false.
  - Fixed Javadoc in QueryResult.
  - Fixed: HTTPServiceCaller now also passes the arguments.
    This bug has been in XINS since version 0.116.

* Generated build file:
  - The generated java files are removed if the impl.xml file has changed.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.186: